--- a/dockerfile/Dockerfile.fl.edge
+++ b/dockerfile/Dockerfile.fl.edge
@@ -1,11 +1,8 @@
-FROM pytorch/pytorch:1.8.0-cuda11.1-cudnn8-runtime
-# RUN rm /etc/apt/sources.list.d/cuda.list
-# RUN apt-key del 7fa2af80
-# RUN apt-key adv --fetch-keys https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64/7fa2af80.pub
-RUN apt-get update && apt-get install -y openslide-tools ca-certificates
+FROM bitnami/pytorch:1.13.1-debian-11-r20
+USER root
+RUN pip3 install protobuf==3.14.0 grpcio==1.34.0 grpcio-tools==1.33.1
 COPY . /app
 RUN pip3 install -r /app/requirements.txt
-RUN pip3 install protobuf==3.14.0 grpcio==1.34.0 grpcio-tools==1.33.1
 
 ENV PYTHONPATH "${PYTHONPATH}:/app"
 WORKDIR /app
